--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,40 @@
 spring.application.name=ProyectoFinal
-# Configuración de la Base de Datos
+# Configuraciï¿½n de la Base de Datos
 spring.datasource.url=jdbc:mysql://localhost:3306/educacionit
 spring.datasource.username=tu_usuario
-spring.datasource.password=tu_contraseña
+spring.datasource.password=tu_contraseÃ±a
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/educacionit?useSSL=false
+spring.datasource.username=tu_usuario
+spring.datasource.password=tu_contraseÃ±a
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA Hibernate Configuración
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+server.port=8080
+
+logging.level.org.springframework=INFO
+logging.level.com.example.demo=DEBUG
+logging.file.name=logs/ProyectoFinal.log
+logging.file.max-size=10MB
+logging.file.max-history=30
+
+springfox.documentation.swagger.v2.path=/api-docs
+springfox.documentation.swagger.v
+# JPA Hibernate Configuraciï¿½n
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Configuración del Puerto del Servidor
+# Configuraciï¿½n del Puerto del Servidor
 server.port=8080
 
-# Configuración de Logs
+# Configuraciï¿½n de Logs
 logging.level.org.springframework=INFO
 logging.level.com.example.demo=DEBUG
 
-# Configuración de Swagger
+# Configuraciï¿½n de Swagger
 springfox.documentation.swagger.v2.path=/api-docs
